--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".ChatActivity">
+    tools:context=".Activity.ChatActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView2"
@@ -20,6 +20,7 @@
         android:id="@+id/sendBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
         android:background="@drawable/circle_green"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,8 +60,8 @@
 
             <ImageView
                 android:id="@+id/attachment"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="12dp"
                 app:srcCompat="@drawable/ic_attachment"
@@ -68,8 +69,8 @@
 
             <ImageView
                 android:id="@+id/camera"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="12dp"
                 android:layout_weight="0"
