--- a/app/src/main/res/layout/activity_setup_profile.xml
+++ b/app/src/main/res/layout/activity_setup_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:backgroundTint="@color/white"
-    tools:context=".SetupProfileActivity">
+    tools:context=".Activity.SetupProfileActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageView"
