--- a/app/src/main/res/drawable/bg_sender.xml
+++ b/app/src/main/res/drawable/bg_sender.xml
@@ -7,13 +7,14 @@
             android:pivotY="0%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="@color/sender" />
+                <solid android:color="#B6F4FF" />
+
             </shape>
         </rotate>
     </item>
-    <item android:right="8dp">
+    <item android:right="7dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/sender" />
+            <solid android:color="#B6F4FF" />
             <corners android:radius="4dp" />
         </shape>
     </item>
