--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/home"
+        android:icon="@drawable/ic_home"
+        android:iconTint="@color/darkblue"
+        android:title="Home" />
     <item
         android:id="@+id/chats"
         android:icon="@drawable/chat"
+        android:iconTint="@color/darkblue"
         android:title="Chats" />
     <item
         android:id="@+id/status"
